# psk_psa_py

./: AGENTS.md  README.md  pyproject.toml  requirements.txt
src/psk_psa_py/psa/: config.py  data.py  data.pyi  reader.py  writer.py
src/psk_psa_py/psk/: data.py  data.pyi  reader.py  writer.py
src/psk_psa_py/shared/: data.py  data.pyi  helpers.py
tests/: psa_tests.py  psk_tests.py  shared_tests.py  test.py
tests/data/: Bat.psk  Slurp_Monster_Axe_LOD0.psk  Suzanne.psk
tests/data/psa/: Carlos_StrafeLF90_2.config  Carlos_StrafeLF90_2.psa  grunt_hh_grabplayer_crouch_SEQ0.psa
tests/data/psk/: Grunt_Preview_LOD0.psk  MAXIM_TURRET_EXT.psk  Shrek.psk  carlos_head_carlos.psk  player_body.psk
